simple-service-nginx-ingress/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-service
spec:
  selector:
    app: simple-app-label
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
