simple-service-nginx-ingress/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: simple-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: /otusapp/.+/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: simple-app-service
                port:
                  number: 8000
          - path: /(.+)
            pathType: ImplementationSpecific
            backend:
              service:
                name: simple-app-service
                port:
                  number: 8000
